# libhinawa

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  README  README.rst  autogen.sh  cgitrc  configure.ac  libhinawa.pc.in  libhinawa.spec  meson.build  meson_options.txt  test.c
.github/workflows/: build.yml
debian/: changelog  control  copyright  libhinawa-dev.install  libhinawa0.symbols  rules  watch
debian/source/: format
doc/: Makefile.am  hinawa.toml.in  meson.build  overview.md  urlmap.js
doc/reference/: Makefile.am  Makefile.in  hinawa-docs.sgml  hinawa-docs.xml  hinawa.types  meson.build
gir/: Makefile.am  autogen.sh  configure.ac  hinawa.py  run.sh
gir/doc/: Makefile.am
gir/doc/reference/: Makefile.am  ghinawa-docs.sgml
gir/src/: Makefile.am  ghinawa.c  ghinawa.h
include/: Makefile.am  efw.h  fcp.h  fw.h  hinawa.h  reactor.h  snd.h
samples/: gtk3  gtk3.py  gtk4  qt4.py  qt5  qt5.py  read-quadlet  read-quadlet-async  run.py  run.sh
samples/common/: __init__.py
src/: Makefile  Makefile.am  backport.h  cycle_time.c  cycle_time.h  efw.c  fcp.c  fw-transaction.c  fw-transaction.h  fw.c  fw_fcp.c  fw_fcp.h  fw_node.c  fw_node.h  fw_req.c  fw_req.h  fw_resp.c  fw_resp.h  fw_unit.c  fw_unit.h  hinawa.h  hinawa.map  hinawa.symbols  hinawa_context.c  hinawa_context.h  hinawa_enum_types.h  hinawa_enums.c.template  hinawa_enums.h.template  hinawa_error.c  hinawa_error.h  hinawa_sigs_marshal.list  internal.h  meson.build  reactor.c  reactor.h  snd.c  snd_dg00x.c  snd_dg00x.h  snd_dice.c  snd_dice.h  (+19 more)
tests/: Makefile.am  cycle-time  fw-fcp  fw-node  fw-req  fw-resp  fw-unit  gtk3-fw.py  gtk3.py  helper.py  hinawa-enum  hinawa-functions  meson.build  qt4-fw.py  qt4.py  qt5-fw.py  qt5.py  run.sh  snd-dg00x  snd-dice  snd-efw  snd-motu  snd-motu-register-dsp-parameter  snd-tscm  snd-unit  test.c
